solved some igs of infiite loops

--- a/public/pdf.html
+++ b/public/pdf.html
@@ -1,6 +1,6 @@
 
 <h1 style="text-align:center;">Quotation</h1>
-<p style="text-align:center;">Techtrix Solutions Private Limited</p>
+<p style="text-align:center;">TickTool Solutions Private Limited</p>
 <p style="text-align:center;">437 C/6 Narayan Peth Opp.LIC Common Wealth Bldg, Laxmi Road Pune-411030, Maharashtra, India.</p>
 <p style="text-align:center;">Phone No - 020 - 24470788, 24447772</p>
 <hr />
@@ -27,5 +27,5 @@
 </ol>
 <h2>Thank You For Your Business!</h2>
 <p>Your’s sincerely,</p>
-<p>For Techtrix Solutions Pvt. Ltd.</p>
+<p>For TickTool Solutions Pvt. Ltd.</p>
 <p>Pune</p>
